--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
+  <script src="/path/to/vue.js"></script>
+<script src="/path/to/vue-router.js"></script>
   <title>CodeSandbox Vue Material</title>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
@@ -14,7 +16,9 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+      
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
